feat: add data table on frontend and show data of companies

--- a/Frontend/src/global.scss
+++ b/Frontend/src/global.scss
@@ -37,6 +37,7 @@ ul {
 .app {
   color: var(--text-color1);
   background-color: var(--bg-color);
+  transition: all 0.3s ease-in-out;
 
   &.dark {
     --bg-color: #000;
